--- a/crypto-tracker.ipynb
+++ b/crypto-tracker.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -106,7 +106,7 @@
     "            delta_percentage = float(cad_price) / float(prev_close) - 1\n",
     "        \n",
     "        line = date+name+symbol+cad_price+', '+usd_price+btc_price\n",
-    "        line += '{:.3f} {:.5f}%'.format(delta_dollars, delta_percentage)\n",
+    "        line += '{:.3f}, {:.5f}%'.format(delta_dollars, delta_percentage)\n",
     "        print(line)\n",
     "        \n",
     "        for letter in line:\n",
@@ -118,11 +118,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'BTC': {'CAD': 19548.84, 'USD': 16190.68, 'BTC': 1}, 'ETH': {'CAD': 558.31, 'USD': 453.13, 'BTC': 0.02781}, 'XRP': {'CAD': 0.2948, 'USD': 0.2351, 'BTC': 1.474e-05}, 'LTC': {'CAD': 151, 'USD': 126.6, 'BTC': 0.007639}, 'DASH': {'CAD': 876.55, 'USD': 701.72, 'BTC': 0.04388}, 'ETC': {'CAD': 33.84, 'USD': 27.1, 'BTC': 0.001687}, 'NEO': {'CAD': 44.14, 'USD': 35.02, 'BTC': 0.002184}, 'EOS': {'CAD': 5.27, 'USD': 4.2, 'BTC': 0.0002633}, 'LSK': {'CAD': 9.6, 'USD': 8.21, 'BTC': 0.000491}}\n",
+      "8-12-2017, Bitcoin, BTC, 19548.84, 16190.68, 1, 361.640, 0.01885%\n",
+      "8-12-2017, Ethereum, ETH, 558.31, 453.13, 0.02781, 0.770, 0.00138%\n",
+      "8-12-2017, RIPPLE, XRP, 0.2948, 0.2351, 1.474e-05, 0.002, 0.00546%\n",
+      "8-12-2017, Litecoin, LTC, 151, 126.6, 0.007639, 0.000, 0.00000%\n",
+      "8-12-2017, Dash, DASH, 876.55, 701.72, 0.04388, -48.970, -0.05291%\n",
+      "8-12-2017, Ethereum Classic, ETC, 33.84, 27.1, 0.001687, 0.830, 0.02514%\n",
+      "8-12-2017, NEO, NEO, 44.14, 35.02, 0.002184, -0.750, -0.01671%\n",
+      "8-12-2017, EOS, EOS, 5.27, 4.2, 0.0002633, 0.120, 0.02330%\n",
+      "8-12-2017, Lisk, LSK, 9.6, 8.21, 0.000491, -0.710, -0.06887%\n"
+     ]
+    }
+   ],
    "source": [
     "def main():\n",
     "    with open('tracker.csv', 'r') as f:\n",
